<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RecyclerViewMascota"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <item
        android:id="@+id/itemStrella"
        android:icon="@drawable/estrella_color"
        android:title="@string/tituloActionViewToolbar"
        app:showAsAction="ifRoom"/>

    <!-- MENU -->

    <item
        android:id="@+id/itemConatacto"
        android:title="@string/itemMenuContacto"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemAcercaDe"
        android:title="@string/itemMenuAcercaDe"
        app:showAsAction="never" />
</menu>